# CG-Project

./: .clang-format  .clang-tidy  CMakeLists.txt  README.md  main.cpp
headers/: tiny_gltf.h  tiny_obj_loader.h
headers/glm/ext/: matrix_transform.hpp  (+4 more)
models/: Coin_Crown_Gold.mgcg  Coin_Gold.mgcg  Coin_Thunder_Gold.mgcg  big_closet.mgcg  blue_wall.mgcg  castle_bed.mgcg  clock.mgcg  closet.mgcg  coffee_table.mgcg  coin.mgcg  coin_sack.mgcg  coin_stack.mgcg  desk_lamp.mgcg  door.mgcg  fractal_wallart.mgcg  gamepad.mgcg  gaming_desk.mgcg  gaming_pouf.mgcg  glass_window.mgcg  gray_wall.mgcg  headphones.mgcg  hostel_bed.mgcg  lamp_post.mgcg  laptop.mgcg  lounge_chair.mgcg  parquet.mgcg  plant1.mgcg  ps5.mgcg  record_table.mgcg  red_column.mgcg  rock_poster.mgcg  rocket.mtl  roof_lamp.mgcg  scene.json  shutters_window.mgcg  speaker.mgcg  study_desk.mgcg  tv.mgcg  welcome_poster.mgcg  window.mgcg  (+1 more)
modules/: SceneManager.hpp  Starter.hpp  TextMaker.hpp
shaders/: CartoonShader.frag  CartoonShader.vert  CartoonShaderFrag.spv  CartoonShaderVert.spv  CoinShader.frag  CoinShader.vert  CoinShaderFrag.spv  CookTorranceShader.frag  CookTorranceShader.vert  CookTorranceShaderFrag.spv  CookTorranceShaderVert.spv  LambertBlinnSEShader.frag  LambertBlinnSEShaderFrag.spv  LambertBlinnShader.frag  LambertBlinnShader.vert  LambertBlinnShaderFrag.spv  LampShader.frag  LampShaderFrag.spv  RocketShader.frag  RocketShaderFrag.spv  RocketShaderVert.spv  ToonShader.frag  ToonShader.vert  ToonShaderFrag.spv  ToonShaderVert.spv  WindowShader.frag  WindowShaderFrag.spv  compileShaders.sh
(+1 files in other folders)
